APIS are frustrating

--- a/index.html
+++ b/index.html
@@ -14,15 +14,6 @@
 
 <body>
   <script src="/Users/jc/github/jquery-project/node_modules/jquery/dist/jquery.min.js"></script>
-  <script>
-    $(document).ready(function() {
-      $("#addbutton").on("click", function() {
-        $.getJSON("/json/cats.json", function(json) {
-          $(".message").html(JSON.stringify(json));
-        });
-      });
-    });
-  </script>
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
@@ -51,7 +42,7 @@
   </div>
 
   <div class="row">
-    <div class="col-sm-6 message">
+    <div class="col-sm-6">
       <button type="button" id="addButton" class="btn-primary" onclick="addClick;()">
       Add Product
     </button>
@@ -65,7 +56,7 @@
           Product Information
         </div>
         <div class="panel-body">
-          <div class="form-group">
+          <div class="form-group message">
             <label for="productname">Product Name</label>
             <input type="text" id="productname" class="form-control" />
           </div>
@@ -90,14 +81,7 @@
       </div>
     </div>
   </div>
-
-  <button class="trigger">Open</button>
-
-  <section class="overlay">
-    <button class="trigger">Close</button>
-  </section>
-  <script src="/Users/jc/github/jquery-project/js/scripts.js">
-  </script>
+  <script src="/Users/jc/github/jquery-project/js/scripts.js"></script>
   <script src="/Users/jc/github/jquery-project/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
