chuck this away later

--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
       </div>
     </div>
   </div>
+
+  <div class="content">
+   <div class="quote-div">
+     <p class="quote" id="quote" </p>
+       <p class="author" id="author"></p>
+   </div>
+   <div class="btn-container">
+     <button class="btn" id="quoteButton">Random Quote</button>
+   </div>
+   <p> <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Amazing%20Quotes%20here:" data-counturl="http://codepen.io/Dooraven/full/WQbBGN/">
+     Tweet</a> </p>
+   <p> A FreeCodeCamp project by Nilushanan Kulasingham. Special thanks to @terryrey for help with API </p>
+ </div>
   <script src="/Users/jc/github/jquery-project/js/scripts.js"></script>
   <script src="/Users/jc/github/jquery-project/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
