fetch API call example

--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
    </div>
    <p> <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Amazing%20Quotes%20here:" data-counturl="http://codepen.io/Dooraven/full/WQbBGN/">
      Tweet</a> </p>
+
    <p> A FreeCodeCamp project by Nilushanan Kulasingham. Special thanks to @terryrey for help with API </p>
+
+//fetch example of API call
+   <h1>Authors</h1>
+   <ul id="authors"></ul>
+   
  </div>
   <script src="/Users/jc/github/jquery-project/js/scripts.js"></script>
   <script src="/Users/jc/github/jquery-project/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
